# chip8

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cd.yml  ci.yml
src/: CMakeLists.txt  main.cpp
src/audio/: audio.cpp  audio.h
src/chip8/: emulator.cpp  emulator.h
src/common/: constants.h  opcodes.h  shared_libs.h
src/cpu/: cpu.cpp  cpu.h
src/display/: display.cpp  display.h
src/input/: input.cpp  input.h
src/memory/: memory.cpp  memory.h
tests/: CMakeLists.txt  test_cpu.cpp  test_memory.cpp
